# SW_Python_Repo_Template

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
